cp-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cp-config
  labels:
    app: cp-config
    env: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cp-config
      env: production
  template:
    metadata:
      name: cp-config
      labels:
        app: cp-config
        env: production
    spec:
      containers:
        - name: cp-config
          image: baguette6/cp-config:latest
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cp-config-service
spec:
  selector:
    app: cp-config
    env: production
  ports:
    - protocol: TCP
      port: 7080
      targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp-config-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - host.simpleg.eu
      secretName: cp-config-tls
  rules:
    - host: host.simpleg.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cp-config-service
                port:
                  number: 80
