ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cuplan-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - host.simpleg.eu
      secretName: host-simpleg-tls
  rules:
    - host: host.simpleg.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cp-config-service
                port:
                  number: 1080
